# q-tune

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  update-installer.sh
assembly/PCB/v4/: CYD-pcb-v4-buffer-Castellated .brd  CYD-pcb-v4-buffer-Castellated .sch  CYD-pcb-v4-buffer-wide.brd
main/: CMakeLists.txt  defines.h  globals.h  gpio_task.cpp  idf_component.yml  main.cpp  pitch_detector_task.cpp  tuner_controller.cpp  tuner_controller.h  tuner_gui_task.cpp  tuner_gui_task.h  user_settings.cpp  user_settings.h
main/fonts/: raleway_128.c  tuner_font_image_a2x.c  tuner_font_image_b2x.c  tuner_font_image_c2x.c  tuner_font_image_d2x.c  tuner_font_image_e2x.c  tuner_font_image_f2x.c  tuner_font_image_g2x.c  tuner_font_image_none2x.c  tuner_font_image_sharp2x.c
main/hardware/: I2C_Driver.c  I2C_Driver.h  ST7701S.c  ST7701S.h
main/images/: record_time_arm.c  record_time_title_1.c  record_time_title_2.c  record_time_title_3.c  record_time_title_4.c  record_time_title_5.c
main/standby-ui/: standby_ui_blank.cpp  standby_ui_blank.h  tuner_standby_ui_interface.h
main/tuning-ui/: tuner_ui_attitude.cpp  tuner_ui_attitude.h  tuner_ui_interface.h  tuner_ui_needle.cpp  tuner_ui_needle.h  tuner_ui_note_quiz.cpp  tuner_ui_note_quiz.h  tuner_ui_record_time.cpp  tuner_ui_record_time.h  tuner_ui_strobe.cpp  tuner_ui_strobe.h
main/utils/: MedianFilter.hpp  ST7701S.c  ST7701S.h  TCA9554PWR.c  TCA9554PWR.h  exponential_smoother.hpp  hardware.h  lcd.c  lcd.h  touch.c  touch.h
main/waveshare/: CST328.c  CST328.h  I2C_Driver.c  I2C_Driver.h  LVGL_Driver.c  LVGL_Driver.h  ST7789.c  ST7789.h  waveshare.c  waveshare.h
